# EnformionGO-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  config.py  error_handling.py  exceptions.py  logging_config.py  main.py  models.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
